--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>GenXCode – Student Developer Community</title>
+google-site-verification: google27c9199caeb13573.html
+<meta name="description" content="GenXCode is a structured student developer community focused on real-world projects, coding challenges, leagues, internships and tech growth." />
+
+<meta name="keywords" content="GenXCode, student developer community, coding challenges, tech club, internships, leaderboard system, hackathons" />
+
+<meta name="author" content="GenXCode Team" />
+
+<meta property="og:title" content="GenXCode – Student Developer Community" />
+<meta property="og:description" content="Build projects, join challenges and climb leagues inside GenXCode." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://genxcode-portal.vercel.app" />
+<meta property="og:image" content="https://i.ibb.co/SDYy36xJ/Logo.jpg" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
