Added Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>GenXCode – Student Developer Community</title>
 <meta name="description" content="GenXCode is a structured student developer community focused on real-world projects, coding challenges, leagues, internships and tech growth." />
-
+<meta name="google-site-verification" content="Hgy-sR9ePMInC8RScIYTEmbkhj8DPRtpW3GQXATzSl0" />
 <meta name="keywords" content="GenXCode, student developer community, coding challenges, tech club, internships, leaderboard system, hackathons" />
 
 <meta name="author" content="GenXCode Team" />
