--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>GenXCode – Student Developer Community</title>
-<meta name="description" content="GenXCode is a structured student developer community focused on real-world projects, coding challenges, leagues, internships and tech growth." />
+    <title>GenXCode | Student Developer Community | Coding Challenges, Projects & Internships</title>
+<meta name="description" content="GenXCode is a student developer community offering coding challenges, real-world projects, tech internships, leaderboards and skill-based growth programs for aspiring engineers." />
 <meta name="google-site-verification" content="Hgy-sR9ePMInC8RScIYTEmbkhj8DPRtpW3GQXATzSl0" />
-<meta name="keywords" content="GenXCode, student developer community, coding challenges, tech club, internships, leaderboard system, hackathons" />
+<meta name="keywords" content="GenXCode, genxcode, Genxcode, student developer community, coding challenges, internships for students, tech community India, programming league, developer leaderboard" />
 
-<meta name="author" content="GenXCode Team" />
+<meta name="author" content="GenXCode Community" />
 
-<meta property="og:title" content="GenXCode – Student Developer Community" />
-<meta property="og:description" content="Build projects, join challenges and climb leagues inside GenXCode." />
+<meta property="og:title" content="GenXCode | Student Developer Community" />
+<meta property="og:description" content="Join GenXCode – a structured student developer community focused on coding challenges, internships and real-world projects." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://genxcode-portal.vercel.app" />
+<meta property="og:url" content="https://genxcode-portal.vercel.app/" />
 <meta property="og:image" content="https://i.ibb.co/SDYy36xJ/Logo.jpg" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
